<resources>
    <string name="app_name">MemoryCards</string>

    <string name="titleMain">Memory cards</string>
    <string name="titleCardsCollections">Cards collections</string>

    <string name="name">Name</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>

    <string name="titleSearch">Search</string>
    <string name="titleDownloadCollection">Download collection</string>
    <string name="titleEditCollection">Edit collection</string>
    <string name="titleCreateReversedCardsCollection">Create reversed</string>
    <string name="titleClearCounters">Clear counters</string>
    <string name="titleUploadCollection">Upload collection</string>

    <string name="no_cards">No more cards.</string>

    <string name="order">Order</string>
    <string name="random">Random</string>
    <string name="smart">Smart</string>
    <string name="start_notifications">Start notifications</string>

    <string name="dark">Dark</string>
    <string name="light">Light</string>

    <string name="setting_cards_mix_method">Cards mix method</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_cards_stack_size">Cards stack size</string>
    <string name="setting_notify_sending_interval">Notify sending interval</string>
</resources>
