<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/activitySettingsToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
                android:theme="@style/ToolbarTheme"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_cards_mix_method"
                            android:textSize="20sp" />
                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/activitySettingsToggleGroupMix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:singleSelection="true">
                            <Button
                                android:id="@+id/activitySettingsToggleButtonOrder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/order"
                                style="?attr/materialButtonOutlinedStyle" />
                            <Button
                                android:id="@+id/activitySettingsToggleButtonRandom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/random"
                                style="?attr/materialButtonOutlinedStyle" />
                            <Button
                                android:id="@+id/activitySettingsToggleButtonSmart"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/smart"
                                style="?attr/materialButtonOutlinedStyle" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_theme"
                            android:textSize="20sp" />
                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/activitySettingsToggleGroupTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:singleSelection="true">
                            <Button
                                android:id="@+id/activitySettingsToggleButtonLight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/light"
                                style="?attr/materialButtonOutlinedStyle" />
                            <Button
                                android:id="@+id/activitySettingsToggleButtonDark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dark"
                                style="?attr/materialButtonOutlinedStyle" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_cards_stack_size"
                            android:textSize="20sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">
                            <TextView
                                android:id="@+id/activitySettingsTextViewStackSize"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:textSize="16dp" />
                            <SeekBar
                                android:id="@+id/activitySettingsSeekBarStackSize"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginTop="4dp"
                                android:max="50"
                                android:progress="1"/>

                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_notify_sending_interval"
                            android:textSize="20sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">
                            <TextView
                                android:id="@+id/activitySettingsTextViewSendingInterval"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:textSize="16dp" />
                            <SeekBar
                                android:id="@+id/activitySettingsSeekBarSendingInterval"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginTop="4dp"
                                android:max="59"
                                android:progress="1"/>

                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>